--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ pandas==2.2.1
 matplotlib==3.8.3
 seaborn==0.13.2
 plotly==5.19.0
-openpyxl==3.1.2 
+openpyxl==3.1.2
+scikit-learn==1.4.1.post1
+numpy>=1.26.4 
